# My_JamesDSPManager

./: README.md
ALAC/packages_apps_JamesDSPManager/app/src/main/: AndroidManifest.xml
ALAC/packages_apps_JamesDSPManager/app/src/main/java/james/dsp/activity/: OverallFrameLayout.java  SingleFrameLayout.java
ALAC/packages_apps_JamesDSPManager/app/src/main/res/layout-land/: basic_menu.xml
ALAC/packages_apps_JamesDSPManager/app/src/main/res/layout-port/: basic_menu.xml
FLAC/packages_apps_JamesDSPManager/app/jni/: CMakeLists.txt
FLAC/packages_apps_JamesDSPManager/app/jni/FLAC/: CMakeLists.txt
FLAC/packages_apps_JamesDSPManager/app/jni/FLAC/include/share/: alloc.h
FLAC/packages_apps_JamesDSPManager/app/jni/FLAC/libFLAC/: format.c  lpc.c
FLAC/packages_apps_JamesDSPManager/app/jni/libsamplerate/: CMakeLists.txt
FLAC/packages_apps_JamesDSPManager/app/jni/libsndfile/: CMakeLists.txt
FLAC/packages_apps_JamesDSPManager/app/jni/main/: Android.mk  CMakeLists.txt
FLAC/packages_apps_JamesDSPManager/app/src/main/java/james/dsp/activity/: AcousticFieldFrameLayout.java  DSPManager.java  EqualizerActivity.java  MainActivity.java  TimeDelayFrameLayout.java
FLAC/packages_apps_JamesDSPManager/app/src/main/java/james/dsp/preference/: EqualizerSurface.java
FLAC/packages_apps_JamesDSPManager/app/src/main/res/layout/: activity_main.xml
FLAC/packages_apps_JamesDSPManager/app/src/main/res/layout-land/: basic_menu.xml  single_framelayout.xml
FLAC/packages_apps_JamesDSPManager/app/src/main/res/layout-port/: single_framelayout.xml
